[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Turtle.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Sounds/enemy_hit.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Enemies/Turtle/Hit (44x26).png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/Turtle/Idle 2 (44x26).png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/Turtle/Idle 1 (44x26).png" type="Texture" id=5]
[ext_resource path="res://Prefabs/Hitbox.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.5, 7 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_spike"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15.5, 2 )

[node name="Turtle" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )
health = 2

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 14
frame = 1

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 6 )
shape = SubResource( 4 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 6 )
anims/hit = SubResource( 5 )
anims/idle = SubResource( 3 )
anims/idle_spike = SubResource( 2 )

[node name="ray_wall" type="RayCast2D" parent="."]
position = Vector2( 3, 5 )
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 8

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
modulate = Color( 0.172549, 0.945098, 0.0627451, 1 )
position = Vector2( 0, -1 )

[node name="collision" parent="Hitbox" index="0"]
position = Vector2( 1, -7 )

[node name="hitFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="hitbox_spike" type="Area2D" parent="."]
collision_layer = 2

[node name="spike_col" type="CollisionShape2D" parent="hitbox_spike"]
position = Vector2( 0.5, -8 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Hitbox"]
